--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,75 +1,75 @@
- 
-/*Navbar*/
-.navbar{
-  background-color: #002366;
-}
+ /*Navbar*/
 
-.nav-elm:hover{
-  border-bottom: 2px solid white;
-  transition: 0.7s;
-  opacity: 0.7;
- 
-}
+ .navbar {
+   background-color: #002366;
+ }
 
-.nav-elm{
-  padding:10px;
-  margin:10px;
-  color: gold;
-  transition: 0.5s;
-  height:50px;
-}
+ .nav-elm:hover {
+   border-bottom: 2px solid white;
+   transition: 0.7s;
+   opacity: 0.7;
+ }
 
-#main-container {
-  width:80%;
-  margin-left:auto;
-  margin-right: auto;
-  height: 50em;
-  text-align: center;
-  display:block;
-  color:#333;
-  background-color: ivory;
-}
+ .nav-elm {
+   padding: 10px;
+   margin: 10px;
+   color: gold;
+   transition: 0.5s;
+   height: 50px;
+ }
 
-#about{
-  display:block;
-  width:90%;
-  height: 25%;
-  text-align:center;
-  margin-left:auto;
-  margin-right: auto;
-  margin-top:40px;
-}
+ #main-container {
+   width: 95%;
+   margin-left: auto;
+   margin-right: auto;
+   height: 75em;
+   text-align: center;
+   display: block;
+   color: #333;
+   background-color: ivory;
+   box-shadow: 0px 0px 5px black;
+ }
 
-#title-div{
- padding-top:10px;
- 
-}
+ #about {
+   display: block;
+   width: 100%;
+   height: 25%;
+   text-align: center;
+   margin-left: auto;
+   margin-right: auto;
+   margin-top: 40px;
+ }
 
-#title-div a {
-  text-decoration:none;
-  color: #333;
-  font-size:30px;
-}
+ #title-div {
+   padding-top: 10px;
+ }
 
-#title-div a hover {
-  color:#333;
- 
-}
+ #title-div a {
+   text-decoration: none;
+   color: #333;
+   font-size: 30px;
+ }
 
+ #title-div a hover {
+   color: #333;
+ }
 
+ #worktitle {
+   margin-top: 60px;
+ }
 
+ .project-cell {
+   background-color: green;
+    border-color: black;;
+ }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+ body {
+   margin: 0;
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+ }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
+ code {
+   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+ }
