--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,7 +1,8 @@
  /*Navbar*/
 
  .navbar {
-   background-color: #002366;
+   background-color:royalblue;
+   height: 100px;
  }
 
  .nav-elm:hover {
@@ -18,49 +19,69 @@
    height: 50px;
  }
 
- #main-container {
-   width: 95%;
-   margin-left: auto;
-   margin-right: auto;
-   height: 75em;
-   text-align: center;
-   display: block;
-   color: #333;
-   background-color: ivory;
-   box-shadow: 0px 0px 5px black;
+ .main-container{
+   text-align:center;
+   height: 2160px;
+    
+ }
+
+  #title{
+    padding-top:30px;
+  }
+
+ #last-nav-elm{
+   margin-right: 2%;
+ }
+
+ #footer {
+   width:100%;
+   height:150px;
+   background-color:royalblue;
+ }
+
+ #img-container {
+  margin-top:100px;
+  display:inline-block;
+  width: 740px;
+  height: 400px;
+ }
+
+ #img-container img {
+   width:100%;
+   height:100%;
+ }
+
+ .animated-container{
+   transition: 5s;
  }
 
  #about {
-   display: block;
-   width: 100%;
-   height: 25%;
-   text-align: center;
-   margin-left: auto;
-   margin-right: auto;
-   margin-top: 40px;
+   margin-top:50px;
+   font-size: 24px;
  }
 
- #title-div {
-   padding-top: 10px;
+ #about p1{
+   display:block;
  }
 
- #title-div a {
-   text-decoration: none;
-   color: #333;
-   font-size: 30px;
+ #projects-cont{
+   background-color: red;
+   width:60%;
+   height: 30%;
+   margin-top:80px;
+   display:inline-grid;
+   grid-template-columns: 30% 30% 30%;
+   grid-template-rows: 30% 30%;
+
  }
 
- #title-div a hover {
-   color: #333;
+ .projects-elm{
+    border:1px solid black;
  }
 
- #worktitle {
-   margin-top: 60px;
- }
-
- .project-cell {
-   background-color: green;
-    border-color: black;;
+ .projects-elm img {
+   width:100%;
+   height: 100%;
  }
 
  body {
@@ -68,6 +89,7 @@
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
+
  }
 
  code {
