--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -39,14 +39,14 @@
    background-color:royalblue;
  }
 
- #img-container {
+ #main-logo {
   margin-top:100px;
   display:inline-block;
   width: 740px;
   height: 400px;
  }
 
- #img-container img {
+ #main-logo img {
    width:100%;
    height:100%;
  }
@@ -62,26 +62,6 @@
 
  #about p1{
    display:block;
- }
-
- #projects-cont{
-   background-color: red;
-   width:60%;
-   height: 30%;
-   margin-top:80px;
-   display:inline-grid;
-   grid-template-columns: 30% 30% 30%;
-   grid-template-rows: 30% 30%;
-
- }
-
- .projects-elm{
-    border:1px solid black;
- }
-
- .projects-elm img {
-   width:100%;
-   height: 100%;
  }
 
  body {
