--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,12 +1,10 @@
- /*Navbar*/
-
  .navbar {
-   background-color:royalblue;
+   background-color:#000080;
    height: 100px;
  }
 
  .nav-elm:hover {
-   border-bottom: 2px solid white;
+   border-bottom: 2px solid #ffff7f;
    transition: 0.7s;
    opacity: 0.7;
  }
@@ -14,7 +12,7 @@
  .nav-elm {
    padding: 10px;
    margin: 10px;
-   color: gold;
+   color: #ffff7f;
    transition: 0.5s;
    height: 50px;
  }
@@ -22,7 +20,7 @@
  .main-container{
    text-align:center;
    height: 2160px;
-    
+   font-family: 'Playfair Display', serif;
  }
 
   #title{
@@ -32,6 +30,17 @@
  #last-nav-elm{
    margin-right: 2%;
  }
+
+ #about h1{
+   font-size: 62px;
+   margin-bottom:20px;
+   
+ }
+
+ #technologies-title h1{
+   font-size:31px;
+ }
+ 
 
  #footer {
    width:100%;
@@ -51,12 +60,15 @@
  }
 
  #about {
-   margin-top:50px;
    font-size: 24px;
  }
 
  #about p1{
    display:block;
+ }
+
+ #technologies-container{
+   margin-top:50px;
  }
 
  #technologies-grid{
@@ -65,18 +77,15 @@
    display: grid;
    grid-template-columns: 15% 15% 15% 15% 15% 15%;
    justify-content: space-between;
-  background-color: #eee;
    margin-left:auto;
    margin-right: auto;
-   margin-top:50px;
-  border: 2px solid;
  }
 
  @media(max-width:1080px){
    #technologies-grid{
-    width:550px;
+    width:500px;
     height: 320px;
-    grid-template-columns: 30% 30% 30%;
+    grid-template-columns: 33% 33% 33%;
     grid-template-rows: 50% 50%;
    }
    
@@ -84,30 +93,32 @@
 
  .technologies-cell{
     display:inline-block;
-    height: 150px;
-    width: 150px;
+    height: 151px;
+    width: 151px;
     margin:auto;
     border: 2px solid;
  }
 
  .technologies-cell img{
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: 90%;
+    margin-top: 8px;
+    margin-bottom:8px;
  }
 
-
  #display-container{
-   margin-top:50px;
    width:250px;
    height: 100px;
+   margin-top:15px;
    margin-left:auto;
    margin-right: auto;
    font-size: 50px;
  }
 
+
  body {
    margin: 0;
-   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+   font-family: 'Playfair Display', serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
 
