--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -41,7 +41,6 @@
    font-size:31px;
  }
  
-
  #footer {
    width:100%;
    height:150px;
@@ -81,12 +80,13 @@
    margin-right: auto;
  }
 
- @media(max-width:1080px){
+ @media(max-width:1100px){
    #technologies-grid{
-    width:500px;
+    width:480px;
     height: 320px;
     grid-template-columns: 33% 33% 33%;
     grid-template-rows: 50% 50%;
+    
    }
    
  }
@@ -95,8 +95,10 @@
     display:inline-block;
     height: 151px;
     width: 151px;
-    margin:auto;
+    margin-top:auto;
+    margin-bottom: auto;
     border: 2px solid;
+    
  }
 
  .technologies-cell img{
@@ -115,11 +117,31 @@
    font-size: 50px;
  }
 
+ #projects-title{
+  margin-top:50px;
+}
+
+ #projects-container{
+   width: 80%;
+   height: 960px;
+   display: inline-block;
+   background-color: green;
+ }
+
+ #projects-grid {
+   background-color: red;
+   width:90%;
+   height: 50%;
+   margin-left:auto;
+   margin-right: auto;
+ }
+
+
 
  body {
    margin: 0;
    font-family: 'Playfair Display', serif;
-   -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
 
  }
