--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -130,13 +130,41 @@
 
  #projects-grid {
    background-color: red;
-   width:90%;
-   height: 50%;
+   display: grid;
+   width:100%;
+   height: 680px;
    margin-left:auto;
    margin-right: auto;
+   grid-template-columns: 30% 30% 30%;
+   grid-template-rows: 30% 30% 30%;
+   justify-content: space-evenly;
+
  }
 
 
+ .projects-cell{
+   background-color: #eee;
+   width: 100%;
+   height: 100%;
+   margin-top:30px;
+   border:1px solid black;
+   display: inline-block;
+   
+ }
+
+ .project-description{
+   background-color: #eee;
+  border:1px solid black;
+  height: 50px;
+  position: relative;  
+  margin-top:40%;
+ }
+
+ .project-description:hover{
+   opacity: 100%;
+   transition: 0.6s;
+
+ }
 
  body {
    margin: 0;
