--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -19,7 +19,7 @@
 
  .main-container{
    text-align:center;
-   height: 2160px;
+   height: auto;
    font-family: 'Playfair Display', serif;
  }
 
@@ -123,7 +123,7 @@
 
  #projects-container{
    width: 80%;
-   height: 960px;
+   height: 1280px;
    display: inline-block;
    background-color: green;
  }
@@ -131,40 +131,15 @@
  #projects-grid {
    background-color: red;
    display: grid;
-   width:100%;
-   height: 680px;
-   margin-left:auto;
-   margin-right: auto;
-   grid-template-columns: 30% 30% 30%;
-   grid-template-rows: 30% 30% 30%;
-   justify-content: space-evenly;
-
+   height: 1080px;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50%;
  }
-
 
  .projects-cell{
    background-color: #eee;
-   width: 100%;
-   height: 100%;
-   margin-top:30px;
-   border:1px solid black;
-   display: inline-block;
-   
  }
 
- .project-description{
-   background-color: #eee;
-  border:1px solid black;
-  height: 50px;
-  position: relative;  
-  margin-top:40%;
- }
-
- .project-description:hover{
-   opacity: 100%;
-   transition: 0.6s;
-
- }
 
  body {
    margin: 0;
