--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -19,7 +19,7 @@
 
  .main-container{
    text-align:center;
-   height: 2160px;
+   height: 2660px;
    font-family: 'Playfair Display', serif;
  }
 
@@ -121,20 +121,41 @@
   margin-top:50px;
 }
 
- #projects-container{
-   width: 80%;
-   height: 960px;
-   display: inline-block;
-   background-color: green;
- }
+#projects-container{
+  background-color: #eee;
+  width: 100%;
+  height: 1280px;
+}
 
- #projects-grid {
-   background-color: red;
-   width:90%;
-   height: 50%;
-   margin-left:auto;
-   margin-right: auto;
- }
+
+#projects-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 420px;
+  grid-gap: 10px;
+}
+
+.project-cell {         
+  display: inline-block;   
+  background-color: #eee;
+  border:2px solid black;   
+}
+
+.description{
+  width: 100%;
+  height: 200px;
+  margin-top:192px;
+  opacity:0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+}
+
+.description:hover{
+  opacity: 100;
+  transition:1s;
+}
 
 
 
