--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,5 +1,5 @@
  .navbar {
-   background-color:#000080;
+   background-color: #000080;
    height: 100px;
  }
 
@@ -17,157 +17,159 @@
    height: 50px;
  }
 
- .main-container{
-   text-align:center;
+ .main-container {
+   text-align: center;
    height: 2660px;
    font-family: 'Playfair Display', serif;
  }
 
-  #title{
-    padding-top:30px;
-  }
+ #title {
+   padding-top: 30px;
+ }
 
- #last-nav-elm{
+ #last-nav-elm {
    margin-right: 2%;
  }
 
- #about h1{
+ #about h1 {
    font-size: 62px;
-   margin-bottom:20px;
-   
+   margin-bottom: 20px;
  }
 
- #technologies-title h1{
-   font-size:31px;
+ #technologies-title h1 {
+   font-size: 31px;
  }
- 
+
  #footer {
-   width:100%;
-   height:150px;
-   background-color:royalblue;
+   width: 100%;
+   height: 150px;
+   background-color: royalblue;
  }
 
  #main-logo {
-  display:inline-block;
-  width: 400px;
-  height: 400px;
+   display: inline-block;
+   width: 400px;
+   height: 400px;
  }
 
  #main-logo img {
-   width:100%;
-   height:100%;
+   width: 100%;
+   height: 100%;
  }
 
  #about {
    font-size: 24px;
  }
 
- #about p1{
-   display:block;
+ #about p1 {
+   display: block;
  }
 
- #technologies-container{
-   margin-top:50px;
+ #technologies-container {
+   margin-top: 50px;
  }
 
- #technologies-grid{
-   width:1080px;
+ #technologies-grid {
+   width: 1080px;
    height: 170px;
    display: grid;
    grid-template-columns: 15% 15% 15% 15% 15% 15%;
    justify-content: space-between;
-   margin-left:auto;
+   margin-left: auto;
    margin-right: auto;
  }
 
- @media(max-width:1100px){
-   #technologies-grid{
-    width:480px;
-    height: 320px;
-    grid-template-columns: 33% 33% 33%;
-    grid-template-rows: 50% 50%;
-    
+ @media(max-width:1100px) {
+   #technologies-grid {
+     width: 480px;
+     height: 320px;
+     grid-template-columns: 33% 33% 33%;
+     grid-template-rows: 50% 50%;
    }
-   
  }
 
- .technologies-cell{
-    display:inline-block;
-    height: 151px;
-    width: 151px;
-    margin-top:auto;
-    margin-bottom: auto;
-    border: 2px solid;
-    
+ .technologies-cell {
+   display: inline-block;
+   height: 151px;
+   width: 151px;
+   margin-top: auto;
+   margin-bottom: auto;
+   border: 2px solid;
  }
 
- .technologies-cell img{
-    height: 90%;
-    width: 90%;
-    margin-top: 8px;
-    margin-bottom:8px;
+ .technologies-cell img {
+   height: 90%;
+   width: 90%;
+   margin-top: 8px;
+   margin-bottom: 8px;
  }
 
- #display-container{
-   width:250px;
+ #display-container {
+   width: 250px;
    height: 100px;
-   margin-top:15px;
-   margin-left:auto;
+   margin-top: 15px;
+   margin-left: auto;
    margin-right: auto;
    font-size: 50px;
  }
 
- #projects-title{
-  margin-top:50px;
-}
-
-#projects-container{
-  background-color: #eee;
-  width: 100%;
-  height: 1280px;
-}
-
-
-#projects-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-auto-rows: 420px;
-  grid-gap: 10px;
-}
-
-.project-cell {         
-  display: inline-block;   
-  background-color: #eee;
-  border:2px solid black;   
-}
-
-.description{
-  width: 100%;
-  height: 200px;
-  margin-top:192px;
-  opacity:0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-}
-
-.description:hover{
-  opacity: 100;
-  transition:1s;
-}
-
- .projects-cell{
-   background-color: #eee;
+ #projects-title {
+   margin-top: 50px;
  }
 
+ #projects-container {
+   width: 100%;
+   height: 1480px;
+   display: inline-block;
+ }
+
+ #projects-title {
+   height: 50px;
+   margin-top: 50px;
+   margin-bottom: 50px;
+ }
+
+ #projects-title h1 {
+   font-size: 44px;
+ }
+
+ #projects-grid {
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+   grid-auto-rows: 420px;
+   grid-gap: 10px;
+ }
+
+ .project-cell {
+   display: inline-block;
+   background-color: #eee;
+   border: 2px solid black;
+ }
+
+ .description {
+   width: 100%;
+   height: 200px;
+   margin-top: 192px;
+   opacity: 0;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
+
+ .description:hover {
+   opacity: 100;
+   transition: 1s;
+ }
+
+ .projects-cell {
+   background-color: #eee;
+ }
 
  body {
    margin: 0;
    font-family: 'Playfair Display', serif;
-  -webkit-font-smoothing: antialiased;
+   -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
-
  }
 
  code {
