--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,177 +1,184 @@
- .navbar {
-   background-color: #000080;
-   height: 100px;
- }
+.navbar {
+  background-color: #000080;
+  height: 100px;
+}
 
- .nav-elm:hover {
-   border-bottom: 2px solid #ffff7f;
-   transition: 0.7s;
-   opacity: 0.7;
- }
+.nav-elm:hover {
+  border-bottom: 2px solid #ffff7f;
+  transition: 0.7s;
+  opacity: 0.7;
+}
 
- .nav-elm {
-   padding: 10px;
-   margin: 10px;
-   color: #ffff7f;
-   transition: 0.5s;
-   height: 50px;
- }
+.nav-elm {
+  padding: 10px;
+  margin: 10px;
+  color: #ffff7f;
+  transition: 0.5s;
+  height: 50px;
+}
 
- .main-container {
-   text-align: center;
-   height: 2660px;
-   font-family: 'Playfair Display', serif;
- }
+.main-container {
+  text-align: center;
+  font-family: 'Playfair Display', serif;
+  margin-bottom: 10px;
+  display: inline-block;
+  width: 100%;
+ 
+}
 
- #title {
-   padding-top: 30px;
- }
+#title {
+  padding-top: 30px;
+}
 
- #last-nav-elm {
-   margin-right: 2%;
- }
+#last-nav-elm {
+  margin-right: 2%;
+}
 
- #about h1 {
-   font-size: 62px;
-   margin-bottom: 20px;
- }
+#about h1 {
+  font-size: 62px;
+  margin-bottom: 20px;
+}
 
- #technologies-title h1 {
-   font-size: 31px;
- }
+#technologies-title h1 {
+  font-size: 31px;
+}
 
- #footer {
-   width: 100%;
-   height: 150px;
-   background-color: royalblue;
- }
+#footer {
+  width: 100%;
+  height: 150px;
+  background-color: royalblue;
 
- #main-logo {
-   display: inline-block;
-   width: 400px;
-   height: 400px;
- }
+}
 
- #main-logo img {
-   width: 100%;
-   height: 100%;
- }
+#main-logo {
+  display: inline-block;
+  width: 400px;
+  height: 400px;
+}
 
- #about {
-   font-size: 24px;
- }
+#main-logo img {
+  width: 100%;
+  height: 100%;
+}
 
- #about p1 {
-   display: block;
- }
+#about {
+  font-size: 24px;
+}
 
- #technologies-container {
-   margin-top: 50px;
- }
+#about p1 {
+  display: block;
+}
 
- #technologies-grid {
-   width: 1080px;
-   height: 170px;
-   display: grid;
-   grid-template-columns: 15% 15% 15% 15% 15% 15%;
-   justify-content: space-between;
-   margin-left: auto;
-   margin-right: auto;
- }
+#technologies-container {
+  margin-top: 50px;
+  width: 95%;
+  display: inline-block;
+}
 
- @media(max-width:1100px) {
-   #technologies-grid {
-     width: 480px;
-     height: 320px;
-     grid-template-columns: 33% 33% 33%;
-     grid-template-rows: 50% 50%;
-   }
- }
+#technologies-grid {
+  width: 1080px;
+  height: 200px;
+  display: grid;
+  grid-template-columns: 15% 15% 15% 15% 15% 15%;
+  justify-content: space-evenly;
+  margin-left: auto;
+  margin-right: auto;
+}
 
- .technologies-cell {
-   display: inline-block;
-   height: 151px;
-   width: 151px;
-   margin-top: auto;
-   margin-bottom: auto;
-   border: 2px solid;
- }
+@media(max-width:1100px) {
+  #technologies-grid {
+      width: 100%;
+      height: 340px;
+      grid-template-columns: 30% 30% 30%;
+      grid-template-rows: 50% 50%;
 
- .technologies-cell img {
-   height: 90%;
-   width: 90%;
-   margin-top: 8px;
-   margin-bottom: 8px;
- }
+  }
 
- #display-container {
-   width: 250px;
-   height: 100px;
-   margin-top: 15px;
-   margin-left: auto;
-   margin-right: auto;
-   font-size: 50px;
- }
+}
 
- #projects-title {
-   margin-top: 50px;
- }
+.technologies-cell {
+  display: inline-block;
+  height: 151px;
+  width: 151px;
+  margin-top: auto;
+  margin-bottom: auto;
+  border: 2px solid;
+}
 
- #projects-container {
-   width: 100%;
-   height: 1480px;
-   display: inline-block;
- }
+.technologies-cell img {
+  height: 90%;
+  width: 90%;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
 
- #projects-title {
-   height: 50px;
-   margin-top: 50px;
-   margin-bottom: 50px;
- }
+#display-container {
+  width: 250px;
+  height: 100px;
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 50px;
+}
 
- #projects-title h1 {
-   font-size: 44px;
- }
+#projects-title {
+  margin-top: 50px;
+}
 
- #projects-grid {
-   display: grid;
-   grid-template-columns: 1fr 1fr 1fr;
-   grid-auto-rows: 420px;
-   grid-gap: 10px;
- }
+#projects-container {
+  width: 95%;
+  display: inline-block;
+  
+}
 
- .project-cell {
-   display: inline-block;
-   background-color: #eee;
-   border: 2px solid black;
- }
+#projects-title {
+  height: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
 
- .description {
-   width: 100%;
-   height: 200px;
-   margin-top: 192px;
-   opacity: 0;
-   display: flex;
-   justify-content: center;
-   align-items: center;
- }
+#projects-title h1 {
+  font-size: 44px;
+}
 
- .description:hover {
-   opacity: 100;
-   transition: 1s;
- }
+#projects-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 2fr));
+  grid-auto-rows: 420px;
+  grid-gap: 10px;
+  
+}
 
- .projects-cell {
-   background-color: #eee;
- }
+.project-cell {
+  display: inline-block;
+  border: 2px solid black;
+  margin-bottom: 10px;
+}
 
- body {
-   margin: 0;
-   font-family: 'Playfair Display', serif;
-   -webkit-font-smoothing: antialiased;
-   -moz-osx-font-smoothing: grayscale;
- }
+.project-description {
+  width: 100%;
+ background-color: red;
+  opacity: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #313143;
+  color: white;
+}
 
- code {
-   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
- }
+.project-description:hover {
+  opacity: 40%;
+  transition: 1s;
+}
+
+
+body {
+  margin: 0;
+  font-family: 'Playfair Display', serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
