--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -87,9 +87,9 @@
 
 @media(max-width:1100px) {
   #technologies-grid {
-      width: 100%;
+      width: 500px;
       height: 340px;
-      grid-template-columns: 30% 30% 30%;
+      grid-template-columns: 33% 33% 33%;
       grid-template-rows: 50% 50%;
 
   }
@@ -97,11 +97,10 @@
 }
 
 .technologies-cell {
-  display: inline-block;
+  display: block;
   height: 151px;
   width: 151px;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin:auto;
   border: 2px solid;
 }
 
@@ -128,7 +127,8 @@
 #projects-container {
   width: 95%;
   display: inline-block;
-  
+  margin-left:auto;
+  margin-right: auto;
 }
 
 #projects-title {
@@ -143,10 +143,10 @@
 
 #projects-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 2fr));
-  grid-auto-rows: 420px;
+  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+  grid-auto-rows: 240px;
   grid-gap: 10px;
-  
+  width: 100%;
 }
 
 .project-cell {
