--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -105,6 +105,7 @@
  justify-content: center;
  grid-template-columns: repeat(auto-fit, minmax(160px, 160px));
  grid-gap:20px;
+ justify-items: center;
 }
 
 .technologies-cell {
@@ -114,8 +115,7 @@
   height: 160px;
   width: 160px;
   border: 2px solid;
-  margin-left:auto;
-  margin-right: auto;
+  
 }
 
 .technologies-cell img {
@@ -157,10 +157,11 @@
 
 #projects-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-  grid-auto-rows: 320px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 384px));
+  grid-auto-rows: 540px;
   grid-gap: 10px;
   width: 100%;
+  justify-content: center;
 }
 
 .project-cell {
@@ -168,8 +169,10 @@
   flex-direction: column;
   justify-content: flex-start;
   border: 2px solid black;
-
   height: 100%;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .project-photo{
