--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,12 +1,18 @@
-.navbar {
+#navbar {
   background-color: #000080;
   height: 100px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  white-space: nowrap
 }
 
 .nav-elm:hover {
   border-bottom: 2px solid #ffff7f;
   transition: 0.7s;
-  opacity: 0.7;
+  opacity: 30%;
 }
 
 .nav-elm {
@@ -14,7 +20,11 @@
   margin: 10px;
   color: #ffff7f;
   transition: 0.5s;
+  display: inline-block;
   height: 50px;
+  width: 120px;
+  text-align: center;
+  margin-right: 1px;
 }
 
 .main-container {
@@ -23,8 +33,6 @@
   margin-bottom: 10px;
   display: inline-block;
   width: 100%;
-   
- 
 }
 
 #title {
@@ -48,7 +56,6 @@
   width: 100%;
   height: 150px;
   background-color: royalblue;
-
 }
 
 #main-logo {
@@ -76,15 +83,13 @@
   display: inline-block;
 }
 
-
-
 #technologies-grid {
- display: grid;
- width: 100%;
- justify-content: center;
- grid-template-columns: repeat(auto-fit, minmax(160px, 160px));
- grid-gap:20px;
- justify-items: center;
+  display: grid;
+  width: 100%;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 160px));
+  grid-gap: 20px;
+  justify-items: center;
 }
 
 .technologies-cell {
@@ -94,14 +99,12 @@
   height: 160px;
   width: 160px;
   border: 2px solid;
-  
 }
 
 .technologies-cell img {
   height: 90%;
   width: 90%;
   margin: auto;
-  
 }
 
 #display-container {
@@ -120,7 +123,7 @@
 #projects-container {
   width: 95%;
   display: inline-block;
-  margin-left:auto;
+  margin-left: auto;
   margin-right: auto;
 }
 
@@ -154,12 +157,10 @@
   margin-right: auto;
 }
 
-.project-photo{
-
+.project-photo {
   justify-self: flex-start;
   width: 100%;
   height: 70%;
-  
 }
 
 .project-description {
@@ -178,12 +179,11 @@
   transition: 1s;
 }
 
-#nav-dropdown{
-  color:#ffff7f;
-  width:100px;
+#nav-dropdown {
+  color: #ffff7f;
+  width: 100px;
   height: 100px;
 }
-
 
 body {
   margin: 0;
