--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -131,6 +131,7 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     background-color: red;
+    justify-content: center;
 
   }
 }
