--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,33 +1,110 @@
-#navbar {
-  background-color: #000080;
-  height: 100px;
+*{
+  font-family: 'Playfair Display', serif;
+}
+
+nav {
+  position: fixed;
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: center;
-  white-space: nowrap
+  z-index: 1000;
+  background-color: #000080 ;
 }
 
-.nav-elm:hover {
-  transition: 0.7s;
-  border-bottom: 2px solid #ffff7f;
-  opacity: 40%;
+nav .nav-links {
+  clear: both;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: all .6s cubic-bezier(0.1, 0.2, 0.4, 0.2);
+  -moz-transition: all .6s cubic-bezier(0.1, 0.2, 0.4, 0.2);
+  -ms-transition: all .6s cubic-bezier(0.1, 0.2, 0.4, 0.2);
+  -o-transition: all .6s cubic-bezier(0.1, 0.2, 0.4, 0.2);
+  transition: all .6s cubic-bezier(0.1, 0.2, 0.4, 0.2);
 }
 
-.nav-elm {
-  padding: 10px;
-  margin: 10px;
-  color: #ffff7f;
-  transition: 0.5s;
-  display: inline-block;
-  height: 50px;
-  width: 110px;
+nav .nav-links a {
+  font-size: 1.3em;
+  font-weight: 900;
+  letter-spacing: .1em;
+  display: block;
+  padding: 30px 35px;
+  text-decoration: none;
+  color:white;
   text-align: center;
-  margin-right: 1px;
-
+  transition: color .4s ease;
+  -webkit-tap-highlight-color: transparent;
 }
 
+nav .nav-links a.active {}
+
+nav .hamburger-button {
+  width: 50px;
+  display: block;
+  margin: 20px;
+  float: right;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.hamburger-line {
+  width: 45px;
+  height: 4px;
+  display: block;
+  background: rgba(255, 255, 255, 1);
+  margin: 8px auto;
+  border-radius: 5px;
+  -webkit-transition: all .4s cubic-bezier(0.1, 0.2, 0.4, 0.2);
+  -moz-transition: all .4s cubic-bezier(0.1, 0.2, 0.4, 0.2);
+  -ms-transition: all .4s cubic-bezier(0.1, 0.2, 0.4, 0.2);
+  -o-transition: all .4s cubic-bezier(0.1, 0.2, 0.4, 0.2);
+  transition: all .4s cubic-bezier(0.1, 0.2, 0.4, 0.2);
+}
+
+nav #hamburger-check {
+  display: none;
+}
+
+nav #hamburger-check:checked~.nav-links {
+  height: 100vh;
+}
+
+nav #hamburger-check:checked~.hamburger-button .top {
+  -webkit-transform: translateY(12px) rotateZ(45deg);
+  -moz-transform: translateY(12px) rotateZ(45deg);
+  -ms-transform: translateY(12px) rotateZ(45deg);
+  -o-transform: translateY(12px) rotateZ(45deg);
+  transform: translateY(12px) rotateZ(45deg);
+}
+
+nav #hamburger-check:checked~.hamburger-button .middle {
+  width: 0;
+}
+
+nav #hamburger-check:checked~.hamburger-button .bottom {
+  -webkit-transform: translateY(-12px) rotateZ(-45deg);
+  -moz-transform: translateY(-12px) rotateZ(-45deg);
+  -ms-transform: translateY(-12px) rotateZ(-45deg);
+  -o-transform: translateY(-12px) rotateZ(-45deg);
+  transform: translateY(-12px) rotateZ(-45deg);
+}
+
+@media (min-width: 48em)
+/* 48em = 768px */
+
+  {
+  nav .nav-links {
+    clear: none;
+    float: right;
+    height: auto;
+  }
+  nav .nav-links a {
+    display: inline-block;
+  }
+  nav .nav-links a:hover {
+    color: gold;
+  }
+  nav .hamburger-button {
+    display: none;
+  }
+}
 
 .main-container {
   text-align: center;
@@ -39,10 +116,6 @@
 
 #title {
   padding-top: 30px;
-}
-
-#nav-last {
-  margin-right: 2%;
 }
 
 #about h1 {
@@ -69,10 +142,12 @@
 #main-logo img {
   width: 100%;
   height: 100%;
+  margin-top:100px;
 }
 
 #about {
   font-size: 24px;
+  margin-top:100px;
 }
 
 #about p1 {
@@ -85,57 +160,53 @@
   display: inline-block;
 }
 
-#html_logo{
-  grid-area:'html_logo';
+#html_logo {
+  grid-area: 'html_logo';
 }
 
-#css_logo{
-  grid-area:'css_grid';
+#css_logo {
+  grid-area: 'css_grid';
 }
 
-#javascript_logo{
-  grid-area:'javascript_logo';
+#javascript_logo {
+  grid-area: 'javascript_logo';
 }
 
-#jquery_logo{
-  grid-area:'jquery_logo';
+#jquery_logo {
+  grid-area: 'jquery_logo';
 }
 
-#react_logo{
-  grid-area:'react_logo';
+#react_logo {
+  grid-area: 'react_logo';
 }
 
-#bootstrap_logo{
-  grid-area:'boostrap_logo';
+#bootstrap_logo {
+  grid-area: 'boostrap_logo';
 }
-
 
 #technologies-grid {
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto;
   justify-content: center;
-  grid-gap:20px;
+  grid-gap: 20px;
   grid-template-areas: 'html_logo css_logo javascript_logo jquery_logo react_logo bootstrap_logo';
 }
 
-@media (max-width:680px){
-  #technologies-grid{
+@media (max-width:680px) {
+  #technologies-grid {
     grid-template-areas: 'html_logo' 'css_logo' 'javascript_logo' 'jquery_logo' 'react_logo' 'bootstrap_logo';
   }
 }
 
-@media (max-width:992px){
-  #technologies-grid{
+@media (max-width:992px) {
+  #technologies-grid {
     grid-template-areas: 'html_logo css_logo' 'javascript_logo jquery_logo' 'react_logo bootstrap_logo';
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     background-color: red;
-
   }
 }
-
-
 
 .technologies-cell {
   display: flex;
@@ -224,23 +295,14 @@
   transition: 1s;
 }
 
-#nav-dropdown {
-  color: #ffff7f;
-  width: 100px;
-  height: 100px;
-}
-
-#contact-container{
-  margin-top:150px;
-  
-  display:block;
+#contact-container {
+  margin-top: 150px;
+  display: block;
   height: 500px;
 }
 
-
 body {
   margin: 0;
-  font-family: 'Playfair Display', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -248,3 +310,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
