--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -158,6 +158,7 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   margin-top: 50px;
   width: 95%;
   display: inline-block;
+ 
 }
 
 #html_logo {
@@ -186,35 +187,49 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
 
 #technologies-grid {
   display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto;
+  justify-items: center;
   justify-content: center;
-  grid-gap: 20px;
   grid-template-areas: 'html_logo css_logo javascript_logo jquery_logo react_logo bootstrap_logo';
+  gap:10px;
+  text-align: center;
+  grid-template-columns: 160px 160px 160px 160px 160px 160px;
+  grid-template-rows: 160px;
+  background-color:blue;
 }
+
+
+@media (max-width:1072px) {
+  #technologies-grid {
+    grid-template-areas: 'html_logo css_logo' 'javascript_logo jquery_logo' 'react_logo bootstrap_logo';
+    grid-template-columns: 160px 160px;
+    grid-template-rows: 160px 160px 160px;
+    justify-content: center;
+    background-color: red;
+    gap:10px;
+  }
+}
+
 
 @media (max-width:680px) {
   #technologies-grid {
     grid-template-areas: 'html_logo' 'css_logo' 'javascript_logo' 'jquery_logo' 'react_logo' 'bootstrap_logo';
+    grid-template-rows: 160px 160px 160px 160px 160px 160px;
+    grid-template-columns: 160px;
+   background-color: #000080;
+
+  
   }
 }
 
-@media (max-width:992px) {
-  #technologies-grid {
-    grid-template-areas: 'html_logo css_logo' 'javascript_logo jquery_logo' 'react_logo bootstrap_logo';
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    background-color: red;
-  }
-}
 
 .technologies-cell {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 160px;
-  width: 160px;
+  
   border: 2px solid;
+  background-color: green;
+  
 }
 
 .technologies-cell img {
@@ -307,7 +322,4 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
 
