--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,5 +1,5 @@
 *{
-  font-family: 'Playfair Display', serif;
+  font-family: 'Times New Roman';
 }
 
 nav {
@@ -87,7 +87,6 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
 }
 
 @media (min-width: 48em)
-/* 48em = 768px */
 
   {
   nav .nav-links {
@@ -193,31 +192,60 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   text-align: center;
   grid-template-columns: 160px 160px 160px 160px 160px 160px;
   grid-template-rows: 160px;
-  background-color:blue;
+
 }
 
 
-@media (max-width:1072px) {
+#projects-grid {
+  display: grid;
+  grid-template-areas: 'pr-1.1 pr-1.2' 'pr-2.1 pr-2.2' 'pr-3.1 pr-3.2';
+  grid-template-columns: 640px 640px;
+  grid-template-rows: 640px 640px 640px;
+  grid-gap: 10px;
+  width: 100%;
+  justify-content: center;
+
+}
+
+
+
+@media (max-width:1360px) {
   #technologies-grid {
     grid-template-areas: 'html_logo css_logo' 'javascript_logo jquery_logo' 'react_logo bootstrap_logo';
     grid-template-columns: 160px 160px;
     grid-template-rows: 160px 160px 160px;
     justify-content: center;
-    background-color: red;
     gap:10px;
   }
+
+
+#projects-grid {
+  
+  grid-template-areas: 'pr-1.1' 'pr-1.2' 'pr-2.1' 'pr-2.2' 'pr-3.1' 'pr-3.2';
+  grid-template-columns: 640px;
+  grid-template-rows: 640px 640px 640px 640px 640px 640px;
+  
 }
 
 
-@media (max-width:680px) {
+}
+
+
+@media (max-width:767px) {
   #technologies-grid {
     grid-template-areas: 'html_logo' 'css_logo' 'javascript_logo' 'jquery_logo' 'react_logo' 'bootstrap_logo';
     grid-template-rows: 160px 160px 160px 160px 160px 160px;
     grid-template-columns: 160px;
-   background-color: #000080;
-
-  
   }
+
+  #projects-grid {
+  
+    grid-template-areas: 'pr-1.1' 'pr-1.2' 'pr-2.1' 'pr-2.2' 'pr-3.1' 'pr-3.2';
+    grid-template-columns: 320px;
+    grid-template-rows: 320px 320px 320px 320px 320px 320px;
+    
+  }
+  
 }
 
 
@@ -225,10 +253,7 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
   border: 2px solid;
-  background-color: green;
-  
 }
 
 .technologies-cell img {
@@ -265,15 +290,6 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
 
 #projects-title h1 {
   font-size: 44px;
-}
-
-#projects-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 384px));
-  grid-auto-rows: 540px;
-  grid-gap: 10px;
-  width: 100%;
-  justify-content: center;
 }
 
 .project-cell {
