--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,4 +1,4 @@
-*{
+* {
   font-family: 'Times New Roman';
 }
 
@@ -6,7 +6,7 @@ nav {
   position: fixed;
   width: 100%;
   z-index: 1000;
-  background-color: #000080 ;
+  background-color: #000080;
 }
 
 nav .nav-links {
@@ -27,13 +27,11 @@ nav .nav-links a {
   display: block;
   padding: 30px 35px;
   text-decoration: none;
-  color:white;
+  color: white;
   text-align: center;
   transition: color .4s ease;
   -webkit-tap-highlight-color: transparent;
 }
-
-
 
 nav .hamburger-button {
   width: 50px;
@@ -86,25 +84,6 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   transform: translateY(-12px) rotateZ(-45deg);
 }
 
-@media (min-width: 48em)
-
-  {
-  nav .nav-links {
-    clear: none;
-    float: right;
-    height: auto;
-  }
-  nav .nav-links a {
-    display: inline-block;
-  }
-  nav .nav-links a:hover {
-    color: gold;
-  }
-  nav .hamburger-button {
-    display: none;
-  }
-}
-
 .main-container {
   text-align: center;
   margin-bottom: 10px;
@@ -140,12 +119,12 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
 #main-logo img {
   width: 100%;
   height: 100%;
-  margin-top:100px;
+  margin-top: 100px;
 }
 
 #about {
   font-size: 24px;
-  margin-top:100px;
+  margin-top: 100px;
 }
 
 #about p1 {
@@ -156,7 +135,6 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   margin-top: 50px;
   width: 95%;
   display: inline-block;
- 
 }
 
 #html_logo {
@@ -188,13 +166,11 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   justify-items: center;
   justify-content: center;
   grid-template-areas: 'html_logo css_logo javascript_logo jquery_logo react_logo bootstrap_logo';
-  gap:10px;
+  gap: 10px;
   text-align: center;
   grid-template-columns: 160px 160px 160px 160px 160px 160px;
   grid-template-rows: 160px;
-
 }
-
 
 #projects-grid {
   display: grid;
@@ -204,10 +180,7 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   grid-gap: 10px;
   width: 100%;
   justify-content: center;
-
 }
-
-
 
 @media (max-width:1360px) {
   #technologies-grid {
@@ -215,39 +188,44 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
     grid-template-columns: 160px 160px;
     grid-template-rows: 160px 160px 160px;
     justify-content: center;
-    gap:10px;
+    gap: 10px;
   }
-
-
-#projects-grid {
-  
-  grid-template-areas: 'pr-1.1' 'pr-1.2' 'pr-2.1' 'pr-2.2' 'pr-3.1' 'pr-3.2';
-  grid-template-columns: 640px;
-  grid-template-rows: 640px 640px 640px 640px 640px 640px;
-  
+  #projects-grid {
+    grid-template-areas: 'pr-1.1' 'pr-1.2' 'pr-2.1' 'pr-2.2' 'pr-3.1' 'pr-3.2';
+    grid-template-columns: 640px;
+    grid-template-rows: 640px 640px 640px 640px 640px 640px;
+  }
 }
 
-
-}
-
-
-@media (max-width:767px) {
+@media (max-width:48em) {
   #technologies-grid {
     grid-template-areas: 'html_logo' 'css_logo' 'javascript_logo' 'jquery_logo' 'react_logo' 'bootstrap_logo';
     grid-template-rows: 160px 160px 160px 160px 160px 160px;
     grid-template-columns: 160px;
   }
-
   #projects-grid {
-  
     grid-template-areas: 'pr-1.1' 'pr-1.2' 'pr-2.1' 'pr-2.2' 'pr-3.1' 'pr-3.2';
     grid-template-columns: 320px;
     grid-template-rows: 320px 320px 320px 320px 320px 320px;
-    
   }
-  
 }
 
+@media (min-width: 48em) {
+  nav .nav-links {
+    clear: none;
+    float: right;
+    height: auto;
+  }
+  nav .nav-links a {
+    display: inline-block;
+  }
+  nav .nav-links a:hover {
+    color: gold;
+  }
+  nav .hamburger-button {
+    display: none;
+  }
+}
 
 .technologies-cell {
   display: flex;
@@ -301,6 +279,7 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  transition: 0.6s;
 }
 
 .project-photo {
@@ -320,15 +299,19 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   justify-content: center;
 }
 
+a {
+  text-decoration: none !important;
+}
+
 .project-cell:hover {
   opacity: 60%;
-  transition: 1s;
 }
 
 #contact-container {
   margin-top: 150px;
   display: block;
-  height: 500px;
+  height: 400px;
+  background-color: red;
 }
 
 body {
@@ -336,5 +319,3 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-
