--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -2,6 +2,10 @@
   font-family: 'Times New Roman';
 }
 
+a {
+  text-decoration: none !important;
+}
+
 nav {
   position: fixed;
   width: 100%;
@@ -9,7 +13,7 @@ nav {
   background-color: #000080;
 }
 
-nav .nav-links {
+.nav-links {
   clear: both;
   height: 0;
   overflow: hidden;
@@ -20,20 +24,24 @@ nav .nav-links {
   transition: all .6s cubic-bezier(0.1, 0.2, 0.4, 0.2);
 }
 
-nav .nav-links a {
+.nav-elm {
   font-size: 1.3em;
   font-weight: 900;
   letter-spacing: .1em;
   display: block;
   padding: 30px 35px;
-  text-decoration: none;
   color: white;
   text-align: center;
   transition: color .4s ease;
   -webkit-tap-highlight-color: transparent;
 }
 
-nav .hamburger-button {
+.nav-elm:hover{
+  color:gold
+}
+
+
+.hamburger-button {
   width: 50px;
   display: block;
   margin: 20px;
@@ -218,9 +226,15 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   }
   nav .nav-links a {
     display: inline-block;
+    margin-right: 10px;
   }
+
+  
   nav .nav-links a:hover {
     color: gold;
+    border-bottom: 2px solid gold;
+    padding-bottom: 2px;
+    transition: 0.6s;
   }
   nav .hamburger-button {
     display: none;
@@ -299,10 +313,6 @@ nav #hamburger-check:checked~.hamburger-button .bottom {
   justify-content: center;
 }
 
-a {
-  text-decoration: none !important;
-}
-
 .project-cell:hover {
   opacity: 60%;
 }
@@ -311,7 +321,7 @@ a {
   margin-top: 150px;
   display: block;
   height: 400px;
-  background-color: red;
+
 }
 
 body {
